--- a/Examen Progreso 3 - 202520 - PCRIOLLO/AppShell.xaml
+++ b/Examen Progreso 3 - 202520 - PCRIOLLO/AppShell.xaml
@@ -2,14 +2,22 @@
 <Shell
     x:Class="Examen_Progreso_3___202520___PCRIOLLO.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Examen_Progreso_3___202520___PCRIOLLO"
+    xmlns:views="clr-namespace:Examen_Progreso_3___202520___PCRIOLLO.View"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Shell.FlyoutBehavior="Disabled"
-    Title="Examen_Progreso_3___202520___PCRIOLLO">
+    Title="ExamenProgreso3PCRIOLLO">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+
+        <ShellContent
+            Title="Buscar Película"
+            Icon="icon_buscar.png"
+            ContentTemplate="{DataTemplate views:buscarPeliculaPC}"
+            Route="buscarPelicula" />
+        
+      
+     
+    </TabBar>
 
 </Shell>
